Dodano stronę główną, proste menu

--- a/MvcMusicStore/Views/Shared/_Layout.cshtml
+++ b/MvcMusicStore/Views/Shared/_Layout.cshtml
@@ -7,6 +7,15 @@
 </head>
 
 <body>
+    <div id="header">
+        <h1>ASP.NET MVC MUSIC STORE</h1>
+        <ul id="navlist">
+            <li id="first">
+                <a href="/" id="current">Home</a></li>
+            <li id="">
+            <a href="/Store/">Store</a></li>
+        </ul>
+    </div>
     @RenderBody()
 </body>
 </html>
