--- a/MvcMusicStore/Views/StoreManager/Index.cshtml
+++ b/MvcMusicStore/Views/StoreManager/Index.cshtml
@@ -1,5 +1,18 @@
 ﻿@model IEnumerable<MvcMusicStore.Models.Album>
 
+@helper Truncate(string
+input, int length)
+    {
+     if (input.Length <= length)
+     {
+        @input
+     }
+     else
+     {
+        @input.Substring(0, length)<text>...</text>
+     }
+}
+
 @{
     ViewBag.Title = "Index";
 }
@@ -24,24 +37,25 @@
         </th>
         <th></th>
     </tr>
-@foreach (var item in Model) {
+@foreach (var item in Model)
+{
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.Genre.Name)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Artist.Name)
+            @Truncate(item.Artist.Name, 25)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Title)
+            @Truncate(item.Title, 25)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Price)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.AlbumId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.AlbumId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.AlbumId })
+            @Html.ActionLink("Edit", "Edit", new { id = item.AlbumId }) |
+            @Html.ActionLink("Details", "Details", new { id = item.AlbumId }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.AlbumId })
         </td>
     </tr>
 }
